# Easy-Pinn

./: AGENTS.md  CMakeLists.txt  README.md  STATUS.md  easyPinn.out  finiteDifferences.hpp  main.cpp
.github/workflows/: ci.yml
app/: CMakeLists.txt  problem0_main.cpp
app/my_tool/: main.cpp
app/problem0/: problem0.h  problem0_main.cpp  problem0_tests.cpp  problem0_trainer.h
architecture/: README.md  SPEC-0006-arch.md  SPEC-0006A-arch.md  SPEC-0007-arch.md
cmake/: CompilerWarnings.cmake  EasyPinnConfig.cmake.in
lib/: CMakeLists.txt
lib/include/easypinn/: api.h
lib/include/easypinn/public/: MyClass.h  PINN.h  adam.h  finiteDifferences.h  problem0.h  problem0_trainer.h
lib/src/: MyClass.cpp  PINN.cpp  finiteDifferences.cpp
plans/: PLAN-TEMPLATE.md  README.md  SPEC-0006-plan.md  SPEC-0006A-plan.md  SPEC-0007-plan.md
results/: problem0_residuals.csv  problem0_solution.csv
results/problem0/: problem0_solution.csv
skills/: architect_review.md  explainer.md  implement_feature.md  plan_feature.md  plan_lite.md  review_feature.md  review_lite.md  run_feature_workflow.md  spec_writer.md  test_feature.md
specs/: README.md  SPEC-0006-problem-0-baseline.md  SPEC-0006A-adam-and-problem-0-training.md  SPEC-0007-problem0-full-domain-app.md  SPEC-TEMPLATE.md
test/: CMakeLists.txt  test_easypinn.cpp
